	Added Display2D.getScrollPosition() and Display2D.setScrollPosition()
	Renamed SeriesAttributes.getName() and SeriesAttributes.setName() to getSeriesName()
		and getSeriesName() and made the original method names deprecated.  These
		methods had overridden an obscure method in Component which is used for
		obscure other reasons and we wanted to make sure we stayed clear of that.
	Deleted SimpleInspector.getName().
	Inspector now has getTitle() and setTitle() methods.
	Added ContinuousPortrayal2D.getAxes(), ContinuousPortrayal2D.setAxes(), and
		getDrawsFrameAndAxesInFront() and setDrawsFrameAndAxesInFront(...)
	Added NumberTextField.getText(...) and setText(...)
	SimpleInspector now has a smarter approach to its getTitle() method.
	Bug fix to TabbedInspector.  Thanks to Joey Harrison <jharri1@gmu.edu>
	Added Display2D.setSelectionMode(...) and Display2D.getSelectionMode()
	Added Display2D.performSelection(Point2D)
	Added Display2D.setMouseChangesOffset and Display2D.getMouseChangesOffset
	Added proportions and scaling to charting.  Charts no longer auto-resize on 
		window resizing.
	ParallelSequence now properly checkpoints again
	Added a -quiet option to silence MASON's doLoop messages.  Made sure that all 
		error messages in the MASON core used System.err instead of System.out.
		Preceded most warning messages with "WARNING"
	Updated MersenneTwisterFast
	Added sim/util/TableLoader.java and various array methods to DoubleGrid2D and
		IntGrid2D.  Deleted sim/app/pacman/IntPBMGrid2D and moved PacMan to
		use TableLoader instead.
	Modifications made to Schedule to make it easier to subclass it.
	Added discretize(location, discretization) to Continuous2D and Continuous3D
	Updated MersenneTwisterFast again
	New versions of Java introduce a bug in dash patterns for BasicStroke, such that
		you can't define a solid stroke as a BasicStroke having a dash pattern
		of { x, 0.0f }.  We have a workaround in TimeSeriesAttributes.
		Thanks to David Masad <dmasad@gmu.edu>